Mon Mar 24 06:54:55 2003  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/config-linux-common.h: Change the ACE_DEFAULT_BASE_ADDR for
	  the IA-64 from 0x8 to 0x0 so the Linux kernel can choose the
 	  right value.  Thanks to Sergei Pimenov
 	  <sergei.pimenov@intel.com> for reporting this.

Mon Mar 24 13:16:29 CET 2003  Oliver Kellogg  <oliver.kellogg@sysde.eads.net>

	* ace/Node.{h,cpp}:
	* ace/Unbounded_Set.{h,inl,cpp}:

	  Fix for Bugzilla bug 1460 supplied by Rudolf Weber
	  <rfweber@tesionmail.de>, adds a `deleted' flag to ACE_Node, and
	  adds corresponding management methods to ACE_Unbounded_Set.

	* tests/Unbounded_Set_Test.{cpp,icc}: New.

	* tests/Makefile, tests/Makefile.{am,bor}:
	  Add Unbounded_Set_Test.cpp, a regression test for bug 1460.

Sat Mar 22 11:58:12 2003  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* ace/Configuration.cpp: When remove_section() was called the
	  buckets created for the value and section hash map were not
	  deleted.  Added two new lines after
	  if (index_->unbind (SectionExtId, allocator_))
	    return -1;
  
          as follows:

	  value_hash_map->close();  
	  section_entry->int_id_.section_hash_map_->close(allocator_); 
  
          Thanks to Sandip Patel <spatel@pwcwireless.com> for reporting
 	  this.

	* ace/Message_Queue_T.cpp: Moved the notify() hook calls within
	  the protection of the guard lock critical section to prevent
 	  race conditions on cleanup.  Thanks to Ron Muck <rlm@sdiusa.com> 
	  for this suggestion.
 
Fri Mar 21 13:07:09 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/USAGE:
        * bin/MakeProjectCreator/modules/Creator.pm:
        * bin/MakeProjectCreator/modules/Driver.pm:
        * bin/MakeProjectCreator/modules/Options.pm:
        * bin/MakeProjectCreator/modules/ProjectCreator.pm:
        * bin/MakeProjectCreator/modules/WorkspaceCreator.pm:

          Added a -base option to allow a user to specify multiple base